--- a/main.css
+++ b/main.css
@@ -3,6 +3,7 @@
 
 body {
 background-image: url('background5.gif');
+background-position: center center;
 background-repeat: no-repeat;
 background-attachment: fixed;
 background-size: cover;
